styles/styles.css
@layer reset, base, layouts, components;

@import url('./theme.css');
@import url('./header.css');

@layer reset {

	*,
	*::before,
	*::after {
		box-sizing: border-box;
	}

	* {
		margin: 0;
	}

	body {
		line-height: 1.5;
		-webkit-font-smoothing: antialiased;
	}

	img,
	picture,
	video,
	canvas,
	svg {
		display: block;
		max-width: 100%;
		max-height: 100%;
	}

	input,
	button,
	textarea,
	select {
		font: inherit;
		line-height: 1;
	}

	p,
	h1,
	h2,
	h3,
	h4,
	h5,
	h6 {
		overflow-wrap: break-word;
	}

	p {
		text-wrap: pretty;
	}

	h1,
	h2,
	h3,
	h4,
	h5,
	h6 {
		text-wrap: balance;
	}

	button {
		all: unset;
		cursor: pointer;
	}

	a {
		text-decoration: none;
		color: inherit;
	}
}

@layer base {
	body {
		font-family: Inter;
	}
}

@layer components {
	.btn {
		padding-block: 1rem;
		padding-inline: 2rem;
		display: flex;
		align-items: center;
		gap: .5rem;
		border-radius: .5rem;
		background-color: var(--primary-color);
		color: var(--white);

		svg {
			path {
				stroke: var(--white);
			}
		}
	}
}

